--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -53,7 +53,7 @@ rpc-allow-origin-all=true
 # 允许非外部访问, 默认:false
 rpc-listen-all=true
 # 事件轮询方式, 取值:[epoll, kqueue, port, poll, select], 不同系统默认值不同
-event-poll=kqueue
+#event-poll=kqueue
 # RPC监听端口, 端口被占用时可以修改, 默认:6800
 rpc-listen-port=6800
 # 设置的RPC授权令牌, v1.18.4新增功能, 取代 --rpc-user 和 --rpc-passwd 选项
@@ -100,7 +100,7 @@ bt-save-metadata=true
 ## 磁盘相关 ##
 
 #文件保存路径, 默认为当前启动位置
-dir=/Users/name/Downloads/aria2
+dir=/data/_dl
 #文件下载完成后执行的脚本
 on-download-complete=/conf/on-complete.sh
 #另一种Linux文件缓存方式, 使用前确保您使用的内核支持此选项, 需要1.15及以上版本(?)
