update: update aria2.conf and on-complete.sh

--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -100,7 +100,7 @@ bt-save-metadata=true
 ## 磁盘相关 ##
 
 #文件保存路径, 默认为当前启动位置
-dir=/data/_dl
+dir=/data/downloading
 #文件下载完成后执行的脚本
 on-download-complete=/conf/on-complete.sh
 #另一种Linux文件缓存方式, 使用前确保您使用的内核支持此选项, 需要1.15及以上版本(?)
