--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -22,7 +22,7 @@ lowest-speed-limit=0
 # 整体上传速度限制, 运行时可修改, 默认:0
 max-overall-upload-limit=1K
 # 单个任务上传速度限制, 默认:0
-#max-upload-limit=0
+max-upload-limit=128
 # 禁用IPv6, 默认:false
 #disable-ipv6=true
 # 当服务器返回503错误时, aria2会尝试重连
@@ -87,7 +87,8 @@ bt-enable-lpd=true
 #peer-id-prefix=-TR2770-
 #user-agent=Transmission/2.77
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
-#seed-ratio=0
+seed-ratio=0.1
+seed-time=1
 # BT校验相关, 默认:true
 #bt-hash-check-seed=true
 # 继续之前的BT任务时, 无需再次校验, 默认:false
