--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -24,7 +24,7 @@ max-overall-upload-limit=1K
 # 单个任务上传速度限制, 默认:0
 max-upload-limit=128
 # 禁用IPv6, 默认:false
-#disable-ipv6=true
+disable-ipv6=true
 # 当服务器返回503错误时, aria2会尝试重连
 # 尝试重连次数, 0代表无限, 默认:5
 max-tries=0
